# rust_auth0_service

./: .gitignore  LICENSE  README.md
rust-auth0-service/: Cargo.toml  Dockerfile  format.sh  run_docker.sh  rust-check
rust-auth0-service/src/: backupmain.rs  main.rs  test.rs
test_node/: kustomization.yaml  port-forward.sh
test_node/src/: index.html  server.js
test_node/yaml/: create_namespace.yaml  nodejs.yaml
