[package]
name = "rust-auth0-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
dotenv = "0.15"
futures = "0.3"
oauth2 = "4.0"
url = "2.2"
reqwest = { version = "0.11", features = ["json"] }
